tests/negative/test_fnc_func_asgn_eval.orb
eval (fnc foo () {});

eval (fnc bar () {});

fnc main () () {
    eval (= foo bar);
};